# Rust-Practice

./: Cargo.toml  README.md
src/: part1.rs  part3.rs  part4.rs  part5.rs
